crates/test-ui/ui/msg_send_no_return_type.stderr
error[E0283]: type annotations needed
 --> ui/msg_send_no_return_type.rs
  |
  |     unsafe { msg_send![cls, new] };
  |              ^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: cannot satisfy `_: ConvertReturn<MethodFamily<1>>`
  = help: the following types implement trait `ConvertReturn<MethodFamily>`:
            `&CStr` implements `ConvertReturn<MethodFamily>`
            `Option<&CStr>` implements `ConvertReturn<MethodFamily>`
            `Option<Retained<T>>` implements `ConvertReturn<MethodFamily<1>>`
            `Option<Retained<T>>` implements `ConvertReturn<MethodFamily<4>>`
            `Option<Retained<T>>` implements `ConvertReturn<MethodFamily<5>>`
            `Option<Retained<T>>` implements `ConvertReturn<MethodFamily<6>>`
            `Retained<T>` implements `ConvertReturn<MethodFamily<1>>`
            `Retained<T>` implements `ConvertReturn<MethodFamily<4>>`
          and $N others
  = note: required for `MethodFamily<1>` to implement `RetainSemantics<&AnyClass, _, KindSendMessage>`
  = note: required for `MethodFamily<1>` to implement `MsgSend<&AnyClass, _>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
